--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,12 +14,29 @@ body {
 img {
   max-width: 100%;
 }
+
+a {
+  text-decoration: none;
+}
 .container {
   width: 100%;
   height: 100%;
   max-width: 1250px;
   margin: 0 auto;
 }
+.overlayer {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  background-color: rgba(0, 0, 0, 0.5);
+}
+
+/*#############
+#### HEADER ###
+###############
+*/
 
 .header {
   width: 100%;
@@ -48,7 +65,8 @@ img {
   color: #fff;
 }
 
-/*############
+/*
+##############
 #### HOME ####
 ##############
 */
@@ -62,14 +80,6 @@ img {
   width: 100%;
   height: 100vh;
   object-fit: cover;
-}
-.overlay {
-  width: 100%;
-  height: 100vh;
-  position: absolute;
-  top: 0;
-  left: 0;
-  background-color: rgba(0, 0, 0, 0.5);
 }
 
 .text-home {
@@ -92,12 +102,12 @@ img {
 }
 
 .btn {
-  width: 167px;
-  height: 47px;
+  padding: 0.9rem 2.68rem;
   background-color: #3dc8e7;
   border: none;
   font-size: 20px;
   font-weight: bold;
+  color: #fff;
 }
 
 .indicator {
@@ -177,22 +187,29 @@ img {
   text-align: center;
   margin-bottom: 2rem;
 }
+.box-produtos {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 5px;
+}
 .item-produtos {
   width: 100%;
   height: 360px;
+  position: relative;
 }
 
 .item-produtos img {
   width: 100%;
   height: 100%;
 }
-.box-produtos {
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  gap: 5px;
-}
-
 .item-produtos:nth-child(1) {
   grid-row: 1 / span 2;
   height: 725px;
+}
+.item-produtos p {
+  position: absolute;
+  top: 47px;
+  left: 53px;
+  color: #fff;
+  font-size: 2.25rem;
 }
