--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -32,6 +32,9 @@ a {
   left: 0;
   background-color: rgba(0, 0, 0, 0.5);
 }
+.radius {
+  border-radius: 3px;
+}
 
 /*#############
 #### HEADER ###
@@ -52,17 +55,26 @@ a {
   align-items: center;
   height: 100%;
 }
-
+.navbar {
+  height: 100%;
+}
 .navbar ul {
   display: flex;
-  gap: 2rem;
+  /* gap: 0.5rem; */
+  height: 100%;
 }
 .navbar ul li {
   list-style: none;
 }
 .navbar ul li a {
   text-decoration: none;
+  padding: 3rem 25px;
   color: #fff;
+  height: 100%;
+  display: block;
+}
+.navbar ul li a:hover {
+  border-bottom: 3px solid #3dc8e7;
 }
 
 /*
@@ -108,6 +120,10 @@ a {
   font-size: 20px;
   font-weight: bold;
   color: #fff;
+  cursor: pointer;
+}
+.btn:hover {
+  background-color: #0e7a92;
 }
 
 .indicator {
@@ -172,6 +188,10 @@ a {
 ### PRODUTO ###
 ###############
 */
+
+.produtos {
+  margin-bottom: 13rem;
+}
 .title-produtos {
   padding: 5rem 5rem 1rem 5rem;
 }
@@ -212,4 +232,111 @@ a {
   left: 53px;
   color: #fff;
   font-size: 2.25rem;
+}
+
+/*#############
+### CONTATO ###
+################
+*/
+.contato {
+  width: 100%;
+
+  background-image: url("../image/bg-contato.png");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+}
+
+.wrapper {
+  width: 100%;
+  height: 100%;
+  padding: 10rem 1rem;
+  background-color: rgba(0, 0, 0, 0.8);
+}
+/* .title-contato {
+  padding: 5rem 5rem 1rem 5rem;
+} */
+
+.title-contato h1 {
+  font-size: 3rem;
+  color: #fff;
+  text-align: center;
+}
+
+.box-text-contato {
+  color: #fff;
+  text-align: center;
+  margin-bottom: 3rem;
+}
+.form-contato {
+  width: 100%;
+  max-width: 970px;
+  margin: 2rem auto;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 2rem;
+}
+
+.input-control {
+  width: 100%;
+  height: 50px;
+  background: rgba(11, 10, 9, 0.69);
+  border: 1px solid #353434;
+  color: #fff;
+  outline: none;
+  font-size: 1rem;
+  padding: 1rem;
+}
+.text-control {
+  width: 100%;
+  height: 100%;
+  background: rgba(11, 10, 9, 0.69);
+  border: 1px solid #353434;
+  color: #fff;
+  outline: none;
+  font-size: 1rem;
+  padding: 1rem;
+}
+.form-item-grid:nth-child(1) {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  gap: 1.5rem;
+}
+
+.form-item-grid:last-child {
+  grid-column: 1 / span 2;
+  justify-self: center;
+}
+
+.map {
+  width: 100%;
+  height: 597px;
+}
+
+.map iframe {
+  width: 100%;
+  height: 100%;
+}
+
+.footer {
+  width: 100%;
+  height: 127px;
+  background-color: #343333;
+}
+.footer-content {
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.footer-content p {
+  color: #fff;
+}
+.footer-content i {
+  color: #fff;
+  font-size: 1.9rem;
+}
+.footer-content span {
+  margin-right: 1rem;
 }
