--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,342 +1,8 @@
-@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap");
-
-* {
-  margin: 0;
-  box-sizing: border-box;
-  font-family: "Roboto", sans-serif;
-  scroll-behavior: smooth;
-}
-
-body {
-  background-color: #e7e6e6;
-}
-
-img {
-  max-width: 100%;
-}
-
-a {
-  text-decoration: none;
-}
-.container {
-  width: 100%;
-  height: 100%;
-  max-width: 1250px;
-  margin: 0 auto;
-}
-.overlayer {
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  top: 0;
-  left: 0;
-  background-color: rgba(0, 0, 0, 0.5);
-}
-.radius {
-  border-radius: 3px;
-}
-
-/*#############
-#### HEADER ###
-###############
-*/
-
-.header {
-  width: 100%;
-  height: 119px;
-  background-color: rgba(0, 0, 0, 0.7);
-  position: fixed;
-  z-index: 999;
-}
-
-.header-content {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  height: 100%;
-}
-.navbar {
-  height: 100%;
-}
-.navbar ul {
-  display: flex;
-  /* gap: 0.5rem; */
-  height: 100%;
-}
-.navbar ul li {
-  list-style: none;
-}
-.navbar ul li a {
-  text-decoration: none;
-  padding: 3rem 25px;
-  color: #fff;
-  height: 100%;
-  display: block;
-}
-.navbar ul li a:hover {
-  border-bottom: 3px solid #3dc8e7;
-}
-
-/*
-##############
-#### HOME ####
-##############
-*/
-
-.home {
-  width: 100%;
-  height: 100vh;
-  position: relative;
-}
-.home img {
-  width: 100%;
-  height: 100vh;
-  object-fit: cover;
-}
-
-.text-home {
-  width: 100%;
-  max-width: 670px;
-  height: 100vh;
-  position: absolute;
-  top: 30%;
-  left: 17%;
-}
-
-.text-home h1 {
-  color: #fff;
-  font-size: 87px;
-}
-.text-home p {
-  color: #fff;
-  font-size: 17px;
-  margin-bottom: 2rem;
-}
-
-.btn {
-  padding: 0.9rem 2.68rem;
-  background-color: #3dc8e7;
-  border: none;
-  font-size: 20px;
-  font-weight: bold;
-  color: #fff;
-  cursor: pointer;
-}
-.btn:hover {
-  background-color: #0e7a92;
-}
-
-.indicator {
-  display: inline-block;
-  position: absolute;
-  left: 50%;
-  bottom: 2rem;
-  animation: topDown 0.7s infinite alternate;
-}
-
-@keyframes topDown {
-  to {
-    transform: translateY(-20px);
-  }
-}
-
-/*
-###############
-#### SOBRE ####
-###############
-*/
-
-.sobre {
-  width: 100%;
-}
-.title-sobre {
-  padding: 5rem;
-}
-.title-sobre h1 {
-  text-align: center;
-  font-size: 3rem;
-  color: #343333;
-}
-
-.logo-sobre {
-  margin-bottom: 3rem;
-}
-
-.box-text-sobre {
-  width: 100%;
-  height: 870px;
-  margin: 0 97px;
-  max-width: 630px;
-  padding: 2rem 6rem;
-  background-color: #fff;
-  position: relative;
-}
-.box-text-sobre p {
-  width: 70%;
-  line-height: 2.3rem;
-}
-
-.loja-sobre {
-  width: 500px;
-  position: absolute;
-  top: 10%;
-  right: -60%;
-}
-
-/*
-###############
-### PRODUTO ###
-###############
-*/
-
-.produtos {
-  margin-bottom: 13rem;
-}
-.title-produtos {
-  padding: 5rem 5rem 1rem 5rem;
-}
-
-.title-produtos h1 {
-  text-align: center;
-  font-size: 3rem;
-  color: #343333;
-}
-.box-text-produtos {
-  width: 100%;
-  padding: 1rem 8rem;
-  text-align: center;
-  margin-bottom: 2rem;
-}
-.box-produtos {
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  gap: 5px;
-}
-.item-produtos {
-  width: 100%;
-  height: 360px;
-  position: relative;
-}
-
-.item-produtos img {
-  width: 100%;
-  height: 100%;
-}
-.item-produtos:nth-child(1) {
-  grid-row: 1 / span 2;
-  height: 725px;
-}
-.item-produtos p {
-  position: absolute;
-  top: 47px;
-  left: 53px;
-  color: #fff;
-  font-size: 2.25rem;
-}
-
-/*#############
-### CONTATO ###
-################
-*/
-.contato {
-  width: 100%;
-
-  background-image: url("../image/bg-contato.png");
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: cover;
-}
-
-.wrapper {
-  width: 100%;
-  height: 100%;
-  padding: 10rem 1rem;
-  background-color: rgba(0, 0, 0, 0.8);
-}
-/* .title-contato {
-  padding: 5rem 5rem 1rem 5rem;
-} */
-
-.title-contato h1 {
-  font-size: 3rem;
-  color: #fff;
-  text-align: center;
-}
-
-.box-text-contato {
-  color: #fff;
-  text-align: center;
-  margin-bottom: 3rem;
-}
-.form-contato {
-  width: 100%;
-  max-width: 970px;
-  margin: 2rem auto;
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  gap: 2rem;
-}
-
-.input-control {
-  width: 100%;
-  height: 50px;
-  background: rgba(11, 10, 9, 0.69);
-  border: 1px solid #353434;
-  color: #fff;
-  outline: none;
-  font-size: 1rem;
-  padding: 1rem;
-}
-.text-control {
-  width: 100%;
-  height: 100%;
-  background: rgba(11, 10, 9, 0.69);
-  border: 1px solid #353434;
-  color: #fff;
-  outline: none;
-  font-size: 1rem;
-  padding: 1rem;
-}
-.form-item-grid:nth-child(1) {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  gap: 1.5rem;
-}
-
-.form-item-grid:last-child {
-  grid-column: 1 / span 2;
-  justify-self: center;
-}
-
-.map {
-  width: 100%;
-  height: 597px;
-}
-
-.map iframe {
-  width: 100%;
-  height: 100%;
-}
-
-.footer {
-  width: 100%;
-  height: 127px;
-  background-color: #343333;
-}
-.footer-content {
-  height: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
-.footer-content p {
-  color: #fff;
-}
-.footer-content i {
-  color: #fff;
-  font-size: 1.9rem;
-}
-.footer-content span {
-  margin-right: 1rem;
-}
+@import "./global.css";
+@import "./header.css";
+@import "./home.css";
+@import "./sobre.css";
+@import "./produto.css";
+@import "./contato.css";
+@import "./map.css";
+@import "./footer.css";
