--- a/assets/css/produto.css
+++ b/assets/css/produto.css
@@ -19,11 +19,11 @@
 .box-produtos {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  gap: 5px;
+  gap: 2px;
 }
 .item-produtos {
   width: 100%;
-  height: 360px;
+  /* height: 360px; */
   position: relative;
 }
 
@@ -33,12 +33,13 @@
 }
 .item-produtos:nth-child(1) {
   grid-row: 1 / span 2;
-  height: 725px;
+  /* height: 725px; */
 }
 .item-produtos p {
   position: absolute;
   top: 47px;
   left: 53px;
   color: #fff;
-  font-size: 2.25rem;
+  font-size: 1.9rem;
+  font-weight: bold;
 }
