--- a/assets/css/contato.css
+++ b/assets/css/contato.css
@@ -68,3 +68,19 @@
   grid-column: 1 / span 2;
   justify-self: center;
 }
+
+@media (max-width: 490px) {
+  .wrapper {
+    padding: 3rem 1rem;
+  }
+  .title-contato h1 {
+    font-size: 2rem;
+  }
+  .form-contato {
+    grid-template-columns: repeat(1, 1fr);
+  }
+  .form-item-grid:last-child {
+    grid-column: initial;
+    justify-self: initial;
+  }
+}
