--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -8,7 +8,7 @@
 /*add*/
 .header.scroll {
   padding: 1rem;
-  background-color: rgba(0, 0, 0, 0.7);
+  background-color: #000;
 }
 /*add*/
 .header-content {
@@ -20,6 +20,9 @@
 
 .logo {
   width: 180px;
+}
+.logo img {
+  max-width: 180px;
 }
 
 .navbar {
@@ -65,7 +68,7 @@
   }
   .header {
     padding: 1rem 0;
-    background-color: rgba(0, 0, 0, 0.7);
+    background-color: rgb(0, 0, 0);
   }
 
   .logo {
